--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ torch = "^2.5.1"
 numpy = "^2.2.2"
 pandas = "^2.2.3"
 scikit-learn = "^1.6.1"
+jupyter = "^1.1.1"
+umap-learn = "^0.5.7"
 
 
 [tool.poetry.group.test.dependencies]
