--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ autoflake = "^2.3.1"
 [tool.poetry.group.dev.dependencies]
 torchvision = "^0.20.1"
 matplotlib = "^3.10.0"
+pyDRMetrics = ">=0.0.7"
 
 [build-system]
 requires = ["poetry-core"]
