--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ autoflake = "^2.3.1"
 torchvision = "^0.20.1"
 matplotlib = "^3.10.0"
 pyDRMetrics = ">=0.0.7"
+streamlit = "^1.45.1"
+plotly = "^6.1.2"
 
 [build-system]
 requires = ["poetry-core"]
