--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ matplotlib = "^3.10.0"
 pyDRMetrics = ">=0.0.7"
 streamlit = "^1.45.1"
 plotly = "^6.1.2"
+seaborn = "^0.13.2"
 
 [build-system]
 requires = ["poetry-core"]
